--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,8 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 
+## Application Properties (JWT)
+app.jwtSecret= JWTSuperSecretKey
+app.jwtExpiry = 604800000
 
 
